--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ main {
 
 .detalle {
     padding: 20px;
-    background-color: var(--color-white);
+    background-color: whitesmoke;
     border-bottom: 1px solid var(--color-secondary);
 }
 
@@ -403,9 +403,10 @@ main {
     flex-direction: row;
     justify-content: center;
     overflow: hidden;
-    margin: 1em auto 1em auto;
+    margin: 1em auto 0 auto;
     height: 40em;
     width: 50vw;
+
 }
 
 .slider-container {
@@ -525,9 +526,9 @@ main {
     width: 0;
     height: 0;
     margin-left: 0.4em;
-    border-left: 1.3vh solid transparent;
-    border-right: 1.3vh solid transparent;
-    border-bottom: 2.3vh solid #000000; /* Color del triángulo */
+    border-left: 1.1vh solid transparent;
+    border-right: 1.1vh solid transparent;
+    border-bottom: 2.1vh solid #000000; /* Color del triángulo */
     cursor: pointer;
     position: relative;
     z-index: 2;
@@ -535,37 +536,12 @@ main {
     transition: all 0.3s ease;
 }
 
-.modalBtnFondo:hover .modalBtn {
-    width: 0; 
-    height: 0; 
-    border: none; 
-    background-color: transparent; 
-    transform: rotate(0deg); 
-    position: relative;
-    margin: 0;
-    padding-right: 0.25em;
+.modalBtn:hover {
+    margin-left: 0.4em;
+    border-left: 1.3vh solid transparent;
+    border-right: 1.3vh solid transparent;
+    border-bottom: 2.3vh solid #000000;
 }
-
-.modalBtnFondo:hover .modalBtn::before,
-.modalBtnFondo:hover .modalBtn::after {
-    content: '';
-    position: absolute;
-    width: 0.3vh; 
-    height: 1.8vh; 
-    background-color: #0073ee;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.modalBtnFondo:hover .modalBtn::before {
-    left: -0.45vh;
-}
-
-.modalBtnFondo:hover .modalBtn::after {
-    left: 0.45vh; 
-}
-
-
 
 .modal {
     display: none;
@@ -635,7 +611,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 40px;
+    margin: auto;
 }
 
 .carta_comentario {
@@ -691,6 +667,10 @@ main {
 
     .intro p {
         font-size: 0.9em;
+    }
+
+    .comentarios {
+        margin-left: 0.1em !important;
     }
 
     .carta_comentario {
